--- a/base/build.gradle
+++ b/base/build.gradle
@@ -56,7 +56,7 @@ dependencies {
     api root_dependencies.immersionbar_fragment
     api root_dependencies.immersionbar_ktx
     api root_dependencies.RecyclerViewAdapter
-    api root_dependencies.rxpermissions
+    api root_dependencies.permissions
     api root_dependencies.matisse
     api root_dependencies.eventbus
     api root_dependencies.multidex
